--- a/dechirping_efficiency.ipynb
+++ b/dechirping_efficiency.ipynb
@@ -52,7 +52,7 @@
     " - *blimpy* - https://github.com/UCBerkeleySETI/blimpy\n",
     " - *turbo*SETI ($\\leq$ v1.3.0) - https://github.com/UCBerkeleySETI/turbo_seti/releases/tag/1.3.0\n",
     "\n",
-    "Version 1.3.0 of *turbo*SETI is likely the version used by [Price et al. (2020)](https://doi.org/10.3847/1538-3881/ab65f1) because it was released before any subsequent publication by the BL team and it includes `DASK` parellelization, which is explicitly referred to in the cited work. In any case, it is the most up-to-date version of *turbo*SETI at the time of writing (September 7, 2020). \n",
+    "Version 1.3.0 of *turbo*SETI is likely the version used by [Price et al. (2020)](https://doi.org/10.3847/1538-3881/ab65f1) because it was released before any subsequent publication by the Breakthrough Listen (BL) team and it includes `DASK` parellelization, which is explicitly referred to in the cited work. In any case, it is the most up-to-date version of *turbo*SETI at the time of writing (September 7, 2020). \n",
     "\n",
     "We will use the `Waterfall` class as well as the `write_to_hdf5` and `hdf_reader` functions to write our data array in the correct format. We will then use the utilities from the `find_doppler` module of *turbo*SETI to recover the injected signals. Finally, we will use the `make_table` function to display the candidates found in the previous step."
    ]
@@ -287,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we are ready for the second step: Running *turbo*SETI. To do so, we first create a `FindDoppler` instance using the data we just saved. We set `min_drift` to be -0.0001 so that *turbo*SETI looks for the 0 Hz/s signal but doesn't bother with any other negative drift rates (since we only injected positive ones). We set `max_drift` to be 4 Hz/s and the `snr` threshold to 10 to emulate the parameters of [Price et al (2020)](https://doi.org/10.3847/1538-3881/ab65f1)."
+    "Now we are ready for the second step: Running *turbo*SETI. To do so, we first create a `FindDoppler` instance using the data we just saved. We set `min_drift` to be -0.0001 so that *turbo*SETI looks for the 0 Hz/s signal but doesn't bother with any other negative drift rates (since we only injected positive ones). We set `max_drift` to be 4 Hz/s and the `snr` threshold to 10 to emulate the parameters of [Price et al. (2020)](https://doi.org/10.3847/1538-3881/ab65f1)."
    ]
   },
   {
