--- a/dechirping_efficiency.ipynb
+++ b/dechirping_efficiency.ipynb
@@ -48,11 +48,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will also need to import some relevant modules from the *blimpy* and *turbo*SETI packages. For more information on how to install these, please see the Following GitHub repositories:\n",
+    "We will also need to import some relevant modules from the *blimpy* and *turbo*SETI packages. For more information on how to install these, please see the following GitHub repositories:\n",
     " - *blimpy* - https://github.com/UCBerkeleySETI/blimpy\n",
     " - *turbo*SETI ($\\leq$ v1.3.0) - https://github.com/UCBerkeleySETI/turbo_seti/releases/tag/1.3.0\n",
     "\n",
-    "Version 1.3.0 of *turbo*SETI is likely the version used by [Price et al. (2020)](https://doi.org/10.3847/1538-3881/ab65f1) because it was released before any subsequent publication by the Breakthrough Listen (BL) team and it includes `DASK` parellelization, which is explicitly referred to in the cited work. In any case, it is the most up-to-date version of *turbo*SETI at the time of writing (September 7, 2020). \n",
+    "Version 1.3.0 of *turbo*SETI is likely the version used by [Price et al. (2020)](https://doi.org/10.3847/1538-3881/ab65f1) because it was released before any subsequent publication by the Breakthrough Listen (BL) team and it includes `DASK` parallelization, which is explicitly referred to in the cited work. In any case, it is the most up-to-date version of *turbo*SETI at the time of writing (September 7, 2020). \n",
     "\n",
     "We will use the `Waterfall` class as well as the `write_to_hdf5` and `hdf_reader` functions to write our data array in the correct format. We will then use the utilities from the `find_doppler` module of *turbo*SETI to recover the injected signals. Finally, we will use the `make_table` function to display the candidates found in the previous step."
    ]
@@ -109,7 +109,7 @@
    "outputs": [],
    "source": [
     "n_rows_high_t_resolution = 816  # 16*51 - There are 51 time integrations, and the tree algorithm requires a power of 2 rows (16)\n",
-    "n_dfdts_injected = 420  # This is the number of unique dfdts that we will inject. We can calculate this using 4 Hz/s / 0.0096 = 417, but we round up to 420\n",
+    "n_dfdts_injected = 420  # This is the number of unique drift rates (df/dt) that we will inject. We can calculate this using 4 Hz/s / 0.0096 Hz/s = 417, but we round up to 420\n",
     "f_bins_between_signals = 1000  # This is the number of frequency bins between each injected signal. Must be large enough so that signals with large dfdts do not overlap\n",
     "snr_injected = 1000  # The SNR of the injected signals. Must be large enough to capture any losses in sensitivity due to dechirping\n",
     "fft_len = 2**20  # Length of the fft"
@@ -573,7 +573,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Margot et al. (2020) explain that the tree algorithm is not perfect in that it reuses pre-computed sums to achieve `N logN` computational cost. As a result, the tree algorithm shifts every spectrum by an amount that is not always optimal. In other words, it is unable to perfectly dechirp most linear chirp waveforms. We can quantify the level of error associated with the use of the tree algorithm for a variety of array dimensions and reproduce Table 4 of Margot et al. (2020) as follows:"
+    "Margot et al. (2020) explain that the tree algorithm is not perfect in that it reuses pre-computed sums to achieve `N log(N)` computational cost. As a result, the tree algorithm shifts every spectrum by an amount that is not always optimal. In other words, it is unable to perfectly dechirp most linear chirp waveforms. We can quantify the level of error associated with the use of the tree algorithm for a variety of array dimensions and reproduce Table 4 of Margot et al. (2020) as follows:"
    ]
   },
   {
