updated paper reference

--- a/dechirping_efficiency.ipynb
+++ b/dechirping_efficiency.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the first part of this notebook, we provide the code to reproduce the analysis from Section 6.1 of [Margot et al. (2020)](https://arxiv.org/abs/2011.05265). Specifically, we will calculate the *dechirping efficiency* of the *turbo*SETI code. For a complete discussion, please refer to the cited work.\n",
+    "In the first part of this notebook, we provide the code to reproduce the analysis from Section 6.1 of [Margot et al. (2021)](https://mel.epss.ucla.edu/jlm/publications/Margot21.aj161.technosignatures.pdf). Specifically, we will calculate the *dechirping efficiency* of the *turbo*SETI code. For a complete discussion, please refer to the cited work.\n",
     "\n",
     "We will make use of several standard libraries for this task, namely\n",
     " - [os](https://docs.python.org/3/library/os.html)\n",
@@ -573,7 +573,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Margot et al. (2020)](https://arxiv.org/abs/2011.05265) explain that the tree algorithm is not perfect in that it reuses pre-computed sums to achieve `N log(N)` computational cost. As a result, the tree algorithm shifts every spectrum by an amount that is not always optimal. In other words, it is unable to perfectly dechirp most linear chirp waveforms. We can quantify the level of error associated with the use of the tree algorithm for a variety of array dimensions and reproduce Table 4 of [Margot et al. (2020)](https://arxiv.org/abs/2011.05265) as follows:"
+    "[Margot et al. (2021)](https://mel.epss.ucla.edu/jlm/publications/Margot21.aj161.technosignatures.pdf) explain that the tree algorithm is not perfect in that it reuses pre-computed sums to achieve `N log(N)` computational cost. As a result, the tree algorithm shifts every spectrum by an amount that is not always optimal. In other words, it is unable to perfectly dechirp most linear chirp waveforms. We can quantify the level of error associated with the use of the tree algorithm for a variety of array dimensions and reproduce Table 4 of [Margot et al. (2021)](https://mel.epss.ucla.edu/jlm/publications/Margot21.aj161.technosignatures.pdf) as follows:"
    ]
   },
   {
@@ -676,7 +676,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we copy the above output into a markdown cell, we can replicate Table 4 from [Margot et al. (2020)](https://arxiv.org/abs/2011.05265) in this notebook!"
+    "If we copy the above output into a markdown cell, we can replicate Table 4 from [Margot et al. (2021)](https://mel.epss.ucla.edu/jlm/publications/Margot21.aj161.technosignatures.pdf) in this notebook!"
    ]
   },
   {
